--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Rajdhani:400,500,600');
+
 /* ---- reset ---- */
 
 html {
@@ -24,12 +27,17 @@ body {
 
 h1 {}
 
-h2 {}
+h2 {
+  color: #ffea75;
+}
 
-h3 {}
+h3 {
+  color: #ffea75;
+}
 
 p {
   margin: 0;
+  font-size: 20px;
 }
 
 
@@ -68,9 +76,6 @@ p {
   }
 }
 
-
-
-
 /* ---- components ---- */
 
 .button {
@@ -91,21 +96,59 @@ img {
   margin: 10px;
 }
 
-.order-btn {
-  height: 30px;
-  background-color: #ffea75;
-  border: 2px solid transparent;
-  box-shadow: 0px 0px 0px 4px #ffea75;
-  margin-top: 15px;
+.fu-icon {
+  width: 50px;
 }
 
-h3 {
-  color: #ffea75;
+.main-title,.harry {
+  width: 190px;
+}
+
+.main-title,.logo {
+  width: 180px;
+}
+
+.x {
+  font-size: 20px;
+}
+
+hr {
+  width: 200px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.scarfs-title {
+  font-size: 30px;
+  font-family: 'Garamond';
+  margin-bottom: 80px;
+}
+
+.join-text {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  line-height: 35px;
+}
+
+.order-btn {
+  height: 60px;
+  width: 320px;
+  background-color: #FFCC52;
+  border: 2px solid transparent;
+  box-shadow: 0px 0px 0px 4px #FFCC52;
+  margin-top: 70px;
+  font-size: 25px;
+  padding-top: 5px;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 600;
 }
 
 .arrow-down {
-  margin-top: 300px;
-  margin-left: 460px;
+  margin-top: 60px;
+  margin-left: 490px;
+  width: 60px;
 }
 
 /* ---- section ---- */
@@ -121,7 +164,6 @@ section.info {
   align-items: center;
   text-align: center;
   margin-left: 220px;
-  padding-top: 60px;
 }
 
 section.hidden {
@@ -129,13 +171,22 @@ section.hidden {
 }
 
 .chose {
-  background-color: black;
+  background-color: #1F1F1F;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 420px;
+  height: 540px;
   padding: 20px;
+}
+
+.chose-title {
+  font-family: 'Rajdhani', sans-serif;
+  color: #FFCC52;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 50px;
+  margin: 10px;
 }
 
 section.house {
@@ -149,6 +200,7 @@ section.house {
 }
 
 .house-details {
+  border: 1px solid #585858;
   margin: 15px;
 }
 
