--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 /* ---- reset ---- */
 
+
 html {
   box-sizing: border-box;
 }
@@ -29,6 +30,11 @@ h1 {}
 
 h2 {
   color: #ffea75;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  line-height: 35px;
 }
 
 h3 {
@@ -120,7 +126,7 @@ hr {
 
 .scarfs-title {
   font-size: 30px;
-  font-family: 'Garamond';
+  font-family: 'EB Garamond', serif;
   margin-bottom: 80px;
 }
 
@@ -136,8 +142,8 @@ hr {
   height: 60px;
   width: 320px;
   background-color: #FFCC52;
-  border: 2px solid transparent;
-  box-shadow: 0px 0px 0px 4px #FFCC52;
+  box-shadow: 0px 0px 0px 1px #FFCC52;
+  border: 8px solid black;
   margin-top: 70px;
   font-size: 25px;
   padding-top: 5px;
@@ -171,7 +177,7 @@ section.hidden {
 }
 
 .chose {
-  background-color: #1F1F1F;
+  background-color: #090909;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -190,8 +196,10 @@ section.hidden {
 }
 
 section.house {
-  height: 370px;
-  background-color: lightcyan;
+  height: 470px;
+  background-color: #090909;
+  padding-bottom: 40px;
+  color: white;
 }
 
 .houses-container {
@@ -201,11 +209,18 @@ section.house {
 
 .house-details {
   border: 1px solid #585858;
-  margin: 15px;
+  margin: 10px;
+  padding: 15px;
+  background-color: #1f1f1f;
+  
 }
 
 .house-title {
   text-align: center;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 600;
+  letter-spacing: 4px;
+  font-size: 25px;
 }
 
 .house-img {
@@ -215,5 +230,38 @@ section.house {
 .house-desc {
   text-align: center;
   width: 200px;
+  font-family: 'EB Garamond', serif;
+  font-size: 20px;
 }
 
+.house {
+  display: flex;
+  justify-content: center;
+}
+
+.selected-house-img {
+  width: 270px;
+}
+
+.selected-house-details {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.selected-house-desc {
+  font-family: 'EB Garamond', serif;
+  font-size: 25px;
+  margin-bottom: 20px;
+  line-height: 34px;
+}
+
+.selected-btn {
+  margin-top: 0px;
+}
+
+.selection {
+  border: 1px solid #FFCC52;
+}
