--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ section.house {
   font-size: 25px;
   margin-bottom: 20px;
   line-height: 34px;
+  height: 200px;
 }
 
 .selected-btn {
@@ -265,4 +266,10 @@ section.house {
 
 .selection {
   border: 1px solid #FFCC52;
+}
+
+.price {
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  height: 50px;
 }
